Make it more friendly.
- Update to a logical version.
- Variable for secondsToWait interval.
- Add Readme.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "changed-bot",
-  "version": "1.0.0",
+  "name": "lookout-bot",
+  "version": "0.1.1",
   "description": "",
   "main": "index.js",
   "scripts": {
